# smech-farm

./: Cargo.toml  Dockerfile.shell  README.md  build.sh  smech-farm.example.toml
client/: Cargo.toml
client/src/: main.rs
docs/: CNAME  index.html
orchestrator/: Cargo.toml
orchestrator/src/: main.rs
worker/: Cargo.toml
worker/src/: main.rs
