[package]
name    = "smech-farm-orchestrator"
version = "2.0.0"
edition = "2021"

[[bin]]
name = "smech-farm-orchestrator"
path = "src/main.rs"

[dependencies]
rusqlite   = { version = "0.31", features = ["bundled"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
tiny_http  = "0.12"
clap       = { version = "4", features = ["derive"] }
chrono     = "0.4"
toml       = "0.8"
once_cell  = "1"
