[package]
name    = "smech-farm-worker"
version = "2.0.0"
edition = "2021"

[[bin]]
name = "smech-farm-worker"
path = "src/main.rs"

[dependencies]
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
clap       = { version = "4", features = ["derive"] }
chrono     = "0.4"
toml       = "0.8"
